--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Hello World!</title>
+		<link rel="stylesheet" href="index.css" />
+
+		<script src="script.js" defer></script>
+	</head>
+	<body>
+		<h1>💖 Hello Woooooooorld!</h1>
+		<video id="vid" src=""></video>
+		<button id="start">Record</button>
+		<button id="stop">Stop</button>
+		<button id="source">Select Source</button>
+	</body>
 </html>
