--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,24 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>Hello World!</title>
+		<title>Screen Recorder 🎥</title>
 		<link rel="stylesheet" href="index.css" />
 
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<h1>💖 Hello Woooooooorld!</h1>
-		<video id="vid" src=""></video>
-		<button id="start">Record</button>
-		<button id="stop">Stop</button>
-		<button id="source">Select Source</button>
+		<main>
+			<h1>Electron Screen Recording App 🎥</h1>
+			<div class="video-container">
+				<video id="vid" src=""></video>
+			</div>
+			<div class="button-container">
+				<div class="control-btn">
+					<button id="start">Record</button>
+					<button id="stop">Stop</button>
+				</div>
+				<button id="source">Select Source</button>
+			</div>
+		</main>
 	</body>
 </html>
