--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,15 @@
 	</head>
 	<body>
 		<main>
-			<h1>Electron Screen Recording App 🎥</h1>
+			<h1>Electron Screen Recording App 📼</h1>
+			<h3 id="screen"></h3>
 			<div class="video-container">
 				<video id="vid" src=""></video>
 			</div>
 			<div class="button-container">
 				<div class="control-btn">
-					<button id="start">Record</button>
-					<button id="stop">Stop</button>
+					<button id="start">Record 🎥</button>
+					<button id="stop">Stop 🎬</button>
 				</div>
 				<button id="source">Select Source</button>
 			</div>
